<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_customers"
            android:icon="@mipmap/customeravatar"
            android:title="@string/all_Customers" />
        <item
            android:id="@+id/my_profile"
            android:icon="@mipmap/myprofile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/add_customers"
            android:icon="@drawable/add_customer_white_24dp"
            android:title="@string/add_customer" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
